objects/Car__c.object
<CustomObject>
    <fields>
        <fullName>Car_availanle__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Car available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Car_name__c</fullName>
        <label>Car name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Car_number__c</fullName>
        <label>Car number</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charges_Per_Day__c</fullName>
        <label>Charges Per Day</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_seats__c</fullName>
        <label>Number of seats</label>
        <picklist>
            <controllingField>Type_of_car__c</controllingField>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Type_of_car__c</fullName>
        <label>Type of car</label>
        <picklist>
            <picklistValues>
                <fullName>AC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non AC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Car</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>C-{0000}</displayFormat>
        <label>Car ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cars</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>